# agent-secrets-guard

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
asg/: __init__.py  cli.py  detectors.py  scanner.py
tests/: test_detectors.py
